--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Welcome to Jhonatan's repository!!</title>
 </head>
 <body>
-    <h1>Los datos para este repositorio se encuentran en la consola.</h1>
+    <h1>Hola</h1>
 
 </body>
 <script src="/js/index.js"></script>
